# universal-frontend

./: .gitignore  Cargo.toml  README.md
backend-admin/: Cargo.toml
backend-admin/src/: frontend_static.rs  lib.rs
frontend-admin/: vite.config.js
